--- a/app/views/index.jade
+++ b/app/views/index.jade
@@ -1,6 +1,1 @@
-extends layouts/default
-
-block content
-  section(ui-view)
-  script(type="text/javascript").
-    window.user = !{user};
+h1 No Access
